Fix header overflow and scroll lock bugs
todo: reduce header height after scrolling (?)

--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -4,10 +4,13 @@
   align-items: center;
   background-color: var(--primary-light);
   padding-block: 65px;
+  max-width: 100vw;
 
   position: relative;
   z-index: 100;
-  overflow-x: hidden;
+
+  /* this breaks menu */
+  /* overflow-x: hidden; */
 }
 
 .backdrop {
@@ -73,6 +76,12 @@
 @media screen and (max-width: 660px) {
   .header {
     padding-block: 35px;
+    padding-inline: 24px;
+    width: 100%;
+
+    position: fixed;
+    top: 0;
+    left: 0;
   }
 
   .header nav {
